<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:orientation="horizontal" >
          <EditText
            android:id="@+id/register_truename_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_nickname_hint"
            android:inputType="textPersonName"
            android:singleLine="true" />
        <EditText
            android:id="@+id/register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_password"
            android:layout_below="@id/register_truename_edit"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/register_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:background="@drawable/bg_common_btn_brown_selector"
            android:minWidth="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/register_truename_edit"
            android:text="@string/register_start"
            android:textColor="@color/font_color_white"
            android:textSize="@dimen/font_size_large" />
   </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:text="@string/register_nickname_require_hint" />

</LinearLayout>