<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   <RelativeLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/margin_medium"
       >
   <EditText
       android:id="@+id/register_phone_edt"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/register_phone_hint"
       android:ems="10"
       android:inputType="phone" >
       <requestFocus />
   </EditText>
   </RelativeLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_medium"
          android:layout_marginRight="@dimen/margin_medium"
        >

        <EditText
            android:id="@+id/register_verification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/register_verfication_hint"
            android:inputType="number"
            android:minWidth="110dip"
            android:singleLine="true"
             />

        <Button
            android:id="@+id/register_verification_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_xlarge"
            android:background="@drawable/bg_common_btn_brown_selector"
            android:gravity="center"
            android:minWidth="124dip"
            android:text="@string/register_verfication_code"
            android:textColor="@color/font_color_white"
            android:textSize="@dimen/font_size_large" />
    </LinearLayout>
</LinearLayout>
