<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_light_gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/app_ic_launcher"
            android:layout_width="@dimen/avator_medium_size"
            android:layout_height="@dimen/avator_medium_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30.0dip"
            android:contentDescription="@null"
            android:drawableTop="@drawable/ic_launcher"
            android:gravity="center"
            android:text="v1.0"
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/app_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_ic_launcher"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/bg_common_edt_selector"
            android:padding="@dimen/margin_medium"
            android:text="@string/about_app" />

        <LinearLayout
            android:id="@+id/upgradeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_des"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/common_strip_setting_top"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:duplicateParentState="true"
                android:gravity="center"
                android:paddingLeft="@dimen/margin_small"
                android:paddingRight="@dimen/margin_small"
                android:singleLine="true"
                android:text="@string/about_name" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:duplicateParentState="true"
                android:gravity="center"
                android:paddingLeft="@dimen/margin_small"
                android:paddingRight="@dimen/margin_small"
                android:singleLine="true"
                android:text="EVIL" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_mail_feedback"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:layout_below="@id/upgradeLayout"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:background="@drawable/common_strip_setting_bottom"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:duplicateParentState="true"
                android:gravity="center"
                android:paddingLeft="@dimen/margin_small"
                android:paddingRight="@dimen/margin_small"
                android:singleLine="true"
                android:text="@string/about_mail" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:duplicateParentState="true"
                android:gravity="center"
                android:linksClickable="true"
                android:paddingLeft="@dimen/margin_small"
                android:paddingRight="@dimen/margin_small"
                android:singleLine="true"
                android:text="jiangpengtctc@gmail.com" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>